2005-07-07  Paul Eggert  <eggert@cs.ucla.edu>

	Switch to Isamu Hasegawa's implementation of regex, which is
	now in gnulib.
	* regcomp.c, regex_internal.c, regex_internal.h, regexec.c:
	New files, from gnulib.
	* regex.h, regex.c: Sync from gnulib.
	* Makefile.am (libcoreutils_a_SOURCES): Remove regex.h; gnulib
	now does this automatically for us.
	* .cppi-disable: Add regcomp.c, regex_internal.c, regex_internal.h.

2005-07-04  Paul Eggert  <eggert@cs.ucla.edu>

	* verify.h (GL_CONCAT0, GL_CONCAT): Define unconditionally; don't
	depend on whether verify_decl is defined.
	(verify): Renamed from verify_decl.  All uses changed.
	Use an extern function decl, as it can't possibly collide with other
	decls.
	(verify_expr): Renamed from verify.  All uses changed.
	(verify_type__): New private macro.
	(verify, verify_expr): Use it.

2005-07-04  Jim Meyering  <jim@meyering.net>

	* verify.h (verify, verify_dcl): New file/macros.
	* Makefile.am (libcoreutils_a_SOURCES): Add verify.h here, temporarily.
	Eventually, it'll be pulled in via AC_LIBSOURCES.

	* argmatch.h (verify_dcl): Rename from VERIFY.  Update use.

2005-07-03  Paul Eggert  <eggert@cs.ucla.edu>

	Remove the dependency of the strftime module on the tzset module.
	* strftime.c (my_strftime) [! defined _LIBC && ! HAVE_RUN_TZSET_TEST]:
	Copy the input structure, to work around some of the bug with
	Solaris 2.5.1 and Solaris 2.6.

2005-07-03  Jim Meyering  <jim@meyering.net>

	* posixtm.c (posixtime) [lint]: Initialize *all* of tm0, not just
	the .tm_year member, since otherwise gcc-4.0 would now warn about
	tm_zone, tm_gmtoff, tm_isdst, tm_yday, tm_wday.

2005-07-03  Paul Eggert  <eggert@cs.ucla.edu>

	* Makefile.am (libcoreutils_a_SOURCES): Undo previous change.

	* Makefile.am (libcoreutils_a_SOURCES): Add fcntl--.h, stdio--h,
	stdlib--.h, unistd--.h.
	* fts.c [! _LIBC]: Include "lstat.h" rather than rolling our own.
	* lstat.c: Sync from gnulib.
	* lstat.h: New file, from gnulib.
	* stat.c: Remove.
